crates/pcb-zen/tests/snapshots/input__component_rejects_interface_even_with_single_net.snap
---
source: crates/pcb-zen/tests/input.rs
expression: snapshot_output
---
Error: Pin 'in' must be connected to a Net, got InterfaceValue
    ╭─[ [TEMP_DIR]test.zen:9:1 ]
    │
  9 │ ╭─▶ Component(
    ┆ ┆   
 17 │ ├─▶ )
    │ │       
    │ ╰─────── Pin 'in' must be connected to a Net, got InterfaceValue
────╯
